--- a/part2/package.json
+++ b/part2/package.json
@@ -6,16 +6,24 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "react-scripts-test",
+    "eject": "react-scripts-eject",
+    "server": "json-server -p3001 --watch db.json"
   },
   "dependencies": {
+    "axios": "^1.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "json-server": "^0.17.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
